# lhwlivesystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  lhwlivesystem.sln  lhwlivesystem.vcxproj  sftp-config.json
Qchatclient/: Makefile  Qchatclient  Qchatclient.pro  main.cpp
builder/: Makefile.common  Makefile.executable  Makefile.shared-library  Makefile.static-library  README.md
chatclient/: .gitignore  CMakeLists.txt  Makefile  main.cpp
chatclient/src/: main.cpp
chatserver/: .gitignore  CMakeLists.txt  Makefile  ServerEventQueueLoop.h  main.cpp
chatserver/src/: ServerEventQueueLoop.h  main.cpp
dos/: Makefile.md  Rector.md  version1.md
dos/C++11/: lambda.md  std::bindandfunc.md  std::map.md  std::thread.md
dos/epoll深入解析/: epoll深入理解的6篇博客
dos/gdb调试方法/: bindandfunc.md  gdb 调试动态链接库.md  gdbmodifyso.md  查看端口是否被占用.md
dos/gdb调试问题总结/: gdb 调试问题总结.md
dos/socket 编程bugs 排查/: bugsrecord.md  errno 错误表.md
dos/version/: version1.md
dos/visio/: ~$$总体架构图.~vsdx  ~$$版本1架构.~vsdx  总体架构图.vsdx  版本1架构.vsdx
dos/阻塞解决方案/: 非阻塞connect.md
qchatclient/: Makefile  buildexe.sh  chatroom.cpp  chatroom.h  chatroom.ui  clientsocket.cpp  clientsocket.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  qchatclient  qchatclient.pro
spider/: Makefile  README.md  基础工具构建.md
spider/logging/: .gitignore  BlockingQueue.h  CMakeLists.txt  Check.h  CheckLogger.cpp  CheckLogger.h  DirectLoggerStream.cpp  DirectLoggerStream.h  ExpressionLogger.cpp  ExpressionLogger.h  IOStreamManager.cpp  IOStreamManager.h  Interface.h  LogItem.h  LogItemQueue.cpp  LogItemQueue.h  LogOutputThread.cpp  LogOutputThread.h  Logger.cpp  Logger.h  LoggerStream.h  Logging.cpp  Logging.h  Makefile  Severity.h  ThreadLoggerStream.cpp  ThreadLoggerStream.h
spider/logging/src/: BlockingQueue.h  CheckLogger.h  DirectLoggerStream.cpp  ExpressionLogger.cpp  IOStreamManager.h  Interface.h  LogItem.h  LogItemQueue.cpp  LogOutputThread.h  Logging.cpp  Logging.h
spider/logging/test/test-logging/: main.cpp
spider/translayor/: .gitignore  CMakeLists.txt  Common.h  CommonUtils.cpp  ConcurrentQueue.h  DataSink.h  EPollClient.cpp  EPollConnection.cpp  EPollServer.h  EPollStream.cpp  Exendian.h  IoLoop.h  LhwBaseServer.h  LhwBaseStream.h  LhwByteArray.h  LhwChat.cpp  LhwChat.h  LhwChatManager.cpp  LhwChatManager.h  LhwClient.cpp  LhwClient.h  LhwClientConnected.cpp  LhwClientConnected.h  LhwCommon.cpp  LhwCommon.h  LhwComponAlias.h  LhwDBHelper.cpp  LhwDBHelper.h  LhwEpollLoop.cpp  LhwEpollLoop.h  LhwEpollStream.cpp  LhwEpollStream.h  LhwEventQueueLoop.cpp  LhwEventQueueLoop.h  LhwEventVector.h  LhwIOStream.h  LhwLoop.h  LhwOnLineDao.cpp  LhwOnLineDao.h  LhwOnLineDaoImp.cpp  (+20 more)
spider/translayor/http/: HttpConnection.cpp  HttpContext.cpp  HttpContext.h  HttpDataSink.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  HttpServer.cpp  LhwHttpConnection.cpp  LhwHttpConnection.h  LhwHttpContext.cpp  LhwHttpContext.h  LhwHttpRequest.cpp  LhwHttpRequest.h  LhwHttpResponse.cpp  LhwHttpResponse.h  LhwHttpServer.cpp  LhwHttpServer.h  String.cpp  String.h
spider/translayor/src/: ByteArray.h  CommonUtils.h  ConcurrentQueue.h  DataSink.h  EPollClient.cpp  EPollClient.h  EPollConnection.cpp  EPollConnection.h  EPollLoop.cpp  EPollLoop.h  EPollServer.cpp  EPollServer.h  EPollStream.cpp  EPollStream.h  EventQueue.cpp  EventQueue.h  EventQueueLoop.cpp  EventQueueLoop.h  IoLoop.h  Net.cpp  Net.h  PackageDataSink.cpp  ServerSample.cpp  ThreadPool.h  thread_pool.tcc
spider/translayor/src/http/: HttpConnection.cpp  HttpConnection.h  HttpContext.cpp  HttpContext.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.h  String.cpp
testlog/: Makefile
testlog/src/: main.cpp
